--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="libs/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -22,6 +24,11 @@
           <a href="#"><span class="header-menu-logo-accent">SITE</span>LOGO</a>
         </div>
         <div class="header-menu-link">
+          <div class="header-menu-link-btn">
+            <span class="header-menu-link-btn-row"></span>
+            <span class="header-menu-link-btn-row"></span>
+            <span class="header-menu-link-btn-row"></span>
+          </div>
           <ul class="header-menu-link-list">
             <li><a href="#" class="header-menu-item">Home</a></li>
             <li><a href="#" class="header-menu-item">About</a></li>
@@ -144,7 +151,7 @@
       </div>
     </section>
     <section class="form">
-      <form class="form-container" action="#" method="post">
+      <form class="form-container" action="#">
         <div class="form-item">
           <input class="form-item-btn" type="text" placeholder="Your name...">
         </div>
